# factue-task2

./: .flake8  .gitignore  Makefile  README.md  data.dvc  download_fasttext_model.sh  dvc.sh  env.sh  ollama.sh  ollama0.sh  ollama1.sh  ollama2.sh  ollama3.sh  pyproject.toml  replace_blingfire_dylib.sh  req_guid.in  req_guid.txt  requirements.in  requirements.txt  run_extract copy.sh  run_extract.sh  run_nor_cleanup.sh  run_nor_extract.sh  run_nor_improve.sh  run_nor_judge.sh  run_per_define.sh  run_per_detect_gpt41_base.sh  run_per_explain_azure.sh  run_per_explain_azure1.sh  run_per_test_gpt41_base.sh  run_per_test_gpt41_ft21.sh  run_persuasion_Appeal_to_Values.sh  run_persuasion_Loaded_Language.sh  run_persuasion_Name_Calling-Labeling.sh  run_persuasion_Questioning_the_Reputation.sh  run_persuasion_auto_azure.sh  run_persuasion_auto_deepseek.sh  run_persuasion_auto_deepseek1.sh  run_persuasion_auto_llama copy.sh  run_persuasion_auto_llama.sh  (+2 more)
.dvc/: config
data/: .gitignore  preprocessed.dvc  raw.dvc
data/llm_output/: .gitignore  normalization.dvc
factue/: convert_csv2parquet.py
factue/eda/: agent_test.ipynb  data_test.ipynb  test_prompt.ipynb  test_providers.ipynb  tmp_clean_reference.ipynb  tmp_format_response.ipynb  tmp_parse.ipynb  (+7 more)
notebooks/: base.ipynb  data_test.ipynb  test_prompt.ipynb  test_providers.ipynb  tmp_clean_reference.ipynb  tmp_extractbatch.ipynb  tmp_format_response.ipynb  tmp_langchain_ollama_chat copy.ipynb  tmp_parse.ipynb  tmp_parse_azure_openai.ipynb
old/: lt_check.py  lt_llm_extract.py  old_lt_extract.py  old_lt_llm_process.py
(+126 files in other folders)
