[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factue"
version = "0.1.0"
description = "A Luigi data processing pipeline with LangChain, Pandas and DuckDB"
authors = [
  { name="Marcin Sawiński", email="marcin.sawinski@ue.poznan.com" }
]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]